--- a/index.html
+++ b/index.html
@@ -8,6 +8,111 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <header></header>
+    <header id="home">
+      <nav class="container">
+        <div class="menu-title">
+          <h1>Influencer Products</h1>
+        </div>
+        <ul class="navigation">
+          <li><a href="#home">Home</a></li>
+          <li><a href="#products">Products</a></li>
+          <li><a href="#sign-up">Sign Up</a></li>
+          <li><a href="#log-in">Log In</a></li>
+          <li><a href=""></a></li>
+          <li><a href=""></a></li>
+        </ul>
+      </nav>
+      <section class="container">
+        <div class="banner">
+          <div class="banner-left">
+            <h1>Start your Journey as Influencer</h1>
+            <p>This is fabulous journey for you, as a Influencer</p>
+            <button class="primary-button">Prebook now</button>
+          </div>
+          <div class="banner-right">
+            <img src="images/main-camera.png" alt="Main Camera" />
+          </div>
+        </div>
+      </section>
+    </header>
+    <main class="container">
+      <section id="popularCollection">
+        <div class="section-title">
+          <h2>Popular Collection</h2>
+        </div>
+        <div class="collection">
+          <div class="card">
+            <img src="" alt="" />
+            <h3>Flex Tripod</h3>
+            <p>Worldwide shipping available</p>
+            <p>Buyer protection available</p>
+          </div>
+          <div class="card">
+            <img src="" alt="" />
+            <h3>Flex Tripod</h3>
+            <p>Worldwide shipping available</p>
+            <p>Buyer protection available</p>
+          </div>
+          <div class="card">
+            <img src="" alt="" />
+            <h3>Flex Tripod</h3>
+            <p>Worldwide shipping available</p>
+            <p>Buyer protection available</p>
+          </div>
+          <div class="card">
+            <img src="" alt="" />
+            <h3>Flex Tripod</h3>
+            <p>Worldwide shipping available</p>
+            <p>Buyer protection available</p>
+          </div>
+          <div class="card">
+            <img src="" alt="" />
+            <h3>Flex Tripod</h3>
+            <p>Worldwide shipping available</p>
+            <p>Buyer protection available</p>
+          </div>
+          <div class="card">
+            <img src="" alt="" />
+            <h3>Flex Tripod</h3>
+            <p>Worldwide shipping available</p>
+            <p>Buyer protection available</p>
+          </div>
+          <div class="card">
+            <img src="" alt="" />
+            <h3>Flex Tripod</h3>
+            <p>Worldwide shipping available</p>
+            <p>Buyer protection available</p>
+          </div>
+          <div class="card">
+            <img src="" alt="" />
+            <h3>Flex Tripod</h3>
+            <p>Worldwide shipping available</p>
+            <p>Buyer protection available</p>
+          </div>
+          <div class="card">
+            <img src="" alt="" />
+            <h3>Flex Tripod</h3>
+            <p>Worldwide shipping available</p>
+            <p>Buyer protection available</p>
+          </div>
+          <div class="see-more">
+            <a href="#see-more">See More</a>
+          </div>
+        </div>
+      </section>
+      <section class="container">
+        <div class="banner">
+          <div class="banner-left">
+            <img src="images/main-camera.png" alt="Main Camera" />
+          </div>
+
+          <div class="banner-right">
+            <h1>Start your Journey as Influencer</h1>
+            <p>This is fabulous journey for you, as a Influencer</p>
+            <button class="primary-button">Prebook now</button>
+          </div>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
