--- a/index.html
+++ b/index.html
@@ -18,8 +18,12 @@
           <li><a href="#products">Products</a></li>
           <li><a href="#sign-up">Sign Up</a></li>
           <li><a href="#log-in">Log In</a></li>
-          <li><a href=""></a></li>
-          <li><a href=""></a></li>
+          <li>
+            <a href=""><i class="fas fa-search"></i></a>
+          </li>
+          <li>
+            <a href=""><i class="fas fa-cart-plus"></i></a>
+          </li>
         </ul>
       </nav>
       <section class="container">
@@ -27,7 +31,9 @@
           <div class="banner-left">
             <h1>Start your Journey as Influencer</h1>
             <p>This is fabulous journey for you, as a Influencer</p>
-            <button class="primary-button">Prebook now</button>
+            <button class="primary-button">
+              Prebook now <span><i class="fas fa-arrow-right"></i></span>
+            </button>
           </div>
           <div class="banner-right">
             <img src="images/main-camera.png" alt="Main Camera" />
@@ -36,67 +42,83 @@
       </section>
     </header>
     <main class="container">
+      <section id="company-logo">
+        <div class="logo">
+          <img src="logos/Alibaba.svg" alt="Logo of Alibaba" />
+          <img src="logos/Amazon.svg" alt="Logo of Amazon.com" />
+          <img src="logos/Daraz.pk Logo.svg" alt="Logo of daraz" />
+          <img src="logos/Ebay.svg" alt="Logo of Ebay" />
+          <img src="logos/Rakuten.svg" alt="Logo of Rakuten" />
+          <img src="logos/Walmart.svg" alt="Logo of Walmart" />
+          <img src="logos/Target.svg" alt="Logo of Target" />
+        </div>
+      </section>
       <section id="popularCollection">
         <div class="section-title">
           <h2>Popular Collection</h2>
         </div>
         <div class="collection">
           <div class="card">
-            <img src="" alt="" />
+            <img src="images/tripod.png" alt="Image of Tripod" />
             <h3>Flex Tripod</h3>
             <p>Worldwide shipping available</p>
             <p>Buyer protection available</p>
           </div>
           <div class="card">
-            <img src="" alt="" />
-            <h3>Flex Tripod</h3>
+            <img src="images/mic.png" alt="Image of Microphone" />
+            <h3>Microphone</h3>
             <p>Worldwide shipping available</p>
             <p>Buyer protection available</p>
           </div>
           <div class="card">
-            <img src="" alt="" />
-            <h3>Flex Tripod</h3>
+            <img src="images/airpod.png" alt="Image of Airbuds" />
+            <h3>Airbuds</h3>
             <p>Worldwide shipping available</p>
             <p>Buyer protection available</p>
           </div>
           <div class="card">
-            <img src="" alt="" />
-            <h3>Flex Tripod</h3>
+            <img src="images/drone.png" alt="Images of Drone" />
+            <h3>Drone</h3>
             <p>Worldwide shipping available</p>
             <p>Buyer protection available</p>
           </div>
           <div class="card">
-            <img src="" alt="" />
-            <h3>Flex Tripod</h3>
+            <img src="images/lights.png" alt="Image of Light Setup" />
+            <h3>Light Setup</h3>
             <p>Worldwide shipping available</p>
             <p>Buyer protection available</p>
           </div>
           <div class="card">
-            <img src="" alt="" />
-            <h3>Flex Tripod</h3>
+            <img src="images/photoshoot.png" alt="" />
+            <h3>Photo-shoot Sets</h3>
             <p>Worldwide shipping available</p>
             <p>Buyer protection available</p>
           </div>
           <div class="card">
-            <img src="" alt="" />
-            <h3>Flex Tripod</h3>
+            <img
+              src="images/Vlogging-camera.png"
+              alt="Image of Vlogging Camera"
+            />
+            <h3>Vlogging Camera</h3>
             <p>Worldwide shipping available</p>
             <p>Buyer protection available</p>
           </div>
           <div class="card">
-            <img src="" alt="" />
-            <h3>Flex Tripod</h3>
+            <img src="images/green-screen.png" alt="Image of Green Screen" />
+            <h3>Green Screen</h3>
             <p>Worldwide shipping available</p>
             <p>Buyer protection available</p>
           </div>
           <div class="card">
-            <img src="" alt="" />
-            <h3>Flex Tripod</h3>
+            <img src="images/action-camera.png" alt="Image of Action Camera" />
+            <h3>Action Camera</h3>
             <p>Worldwide shipping available</p>
             <p>Buyer protection available</p>
           </div>
           <div class="see-more">
-            <a href="#see-more">See More</a>
+            <a href="#see-more"
+              >See More <span><i class="fas fa-arrow-right"></i></span
+            ></a>
           </div>
         </div>
       </section>
@@ -109,10 +131,35 @@
           <div class="banner-right">
             <h1>Start your Journey as Influencer</h1>
             <p>This is fabulous journey for you, as a Influencer</p>
-            <button class="primary-button">Prebook now</button>
+            <button class="primary-button">
+              Join Now <span><i class="fas fa-arrow-right"></i></span>
+            </button>
           </div>
         </div>
       </section>
     </main>
+    <script
+      src="https://kit.fontawesome.com/6d1358c58e.js"
+      crossorigin="anonymous"
+    ></script>
+    <footer>
+      <div class="text-section">
+        <h3>Influencer Products</h3>
+        <small>Copyright &copy; 2020 Influencer products</small><br />
+        <small>All right reserved</small>
+      </div>
+      <div class="social-media">
+        <a href="https://www.instagram.com/"
+          ><i class="fab fa-instagram"></i
+        ></a>
+        <a href="https://www.facebook.com/"
+          ><i class="fab fa-facebook-f"></i
+        ></a>
+        <a href="https://twitter.com/"><i class="fab fa-twitter"></i></a>
+        <a href="https://www.youtube.com/"
+          ><i class="fab fa-youtube-square"></i
+        ></a>
+      </div>
+    </footer>
   </body>
 </html>
