rating section added

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <!-- Navigation Bar start from here -->
     <header id="home">
       <nav class="container">
         <div class="menu-title">
@@ -26,6 +27,8 @@
           </li>
         </ul>
       </nav>
+      <!-- Navigation Bar end here -->
+      <!-- Navigation Cover start from here -->
       <section class="container">
         <div class="banner">
           <div class="banner-left">
@@ -41,7 +44,10 @@
         </div>
       </section>
     </header>
+    <!-- Navigation Cover end here -->
+
     <main class="container">
+      <!-- Company Logo section start from here -->
       <section id="company-logo">
         <div class="logo">
           <img src="logos/Alibaba.svg" alt="Logo of Alibaba" />
@@ -53,6 +59,8 @@
           <img src="logos/Target.svg" alt="Logo of Target" />
         </div>
       </section>
+      <!-- Company Logo section end here -->
+      <!-- Popular Collection section start from here -->
       <section id="popularCollection">
         <div class="section-title">
           <h2>Popular Collection</h2>
@@ -61,36 +69,96 @@
           <div class="card">
             <img src="images/tripod.png" alt="Image of Tripod" />
             <h3>Flex Tripod</h3>
+            <h4>$50.48</h4>
+            <div class="rating-section">
+              <i class="fas fa-star filled"></i>
+              <i class="fas fa-star filled"></i>
+              <i class="fas fa-star filled"></i>
+              <i class="fas fa-star filled"></i>
+              <i class="fas fa-star filled"></i>
+              <i class="fas fa-star-half-alt unfilled"></i>
+              <span>4.99</span>
+            </div>
             <p>Worldwide shipping available</p>
             <p>Buyer protection available</p>
           </div>
           <div class="card">
             <img src="images/mic.png" alt="Image of Microphone" />
             <h3>Microphone</h3>
+            <h4>$12025</h4>
+            <div class="rating-section">
+              <i class="fas fa-star filled"></i>
+              <i class="fas fa-star filled"></i>
+              <i class="fas fa-star filled"></i>
+              <i class="fas fa-star filled"></i>
+              <i class="fas fa-star filled"></i>
+              <i class="fas fa-star-half-alt unfilled"></i>
+              <span>4.99</span>
+            </div>
             <p>Worldwide shipping available</p>
             <p>Buyer protection available</p>
           </div>
           <div class="card">
             <img src="images/airpod.png" alt="Image of Airbuds" />
             <h3>Airbuds</h3>
+            <h4>$100.00</h4>
+            <div class="rating-section">
+              <i class="fas fa-star filled"></i>
+              <i class="fas fa-star filled"></i>
+              <i class="fas fa-star filled"></i>
+              <i class="fas fa-star filled"></i>
+              <i class="fas fa-star filled"></i>
+              <i class="fas fa-star-half-alt unfilled"></i>
+              <span>4.99</span>
+            </div>
             <p>Worldwide shipping available</p>
             <p>Buyer protection available</p>
           </div>
           <div class="card">
             <img src="images/drone.png" alt="Images of Drone" />
             <h3>Drone</h3>
+            <h4>$980.25</h4>
+            <div class="rating-section">
+              <i class="fas fa-star filled"></i>
+              <i class="fas fa-star filled"></i>
+              <i class="fas fa-star filled"></i>
+              <i class="fas fa-star filled"></i>
+              <i class="fas fa-star filled"></i>
+              <i class="fas fa-star-half-alt unfilled"></i>
+              <span>4.99</span>
+            </div>
             <p>Worldwide shipping available</p>
             <p>Buyer protection available</p>
           </div>
           <div class="card">
             <img src="images/lights.png" alt="Image of Light Setup" />
             <h3>Light Setup</h3>
+            <h4>$1200.00</h4>
+            <div class="rating-section">
+              <i class="fas fa-star filled"></i>
+              <i class="fas fa-star filled"></i>
+              <i class="fas fa-star filled"></i>
+              <i class="fas fa-star filled"></i>
+              <i class="fas fa-star filled"></i>
+              <i class="fas fa-star-half-alt unfilled"></i>
+              <span>4.99</span>
+            </div>
             <p>Worldwide shipping available</p>
             <p>Buyer protection available</p>
           </div>
           <div class="card">
             <img src="images/photoshoot.png" alt="" />
             <h3>Photo-shoot Sets</h3>
+            <h4>$820.40</h4>
+            <div class="rating-section">
+              <i class="fas fa-star filled"></i>
+              <i class="fas fa-star filled"></i>
+              <i class="fas fa-star filled"></i>
+              <i class="fas fa-star filled"></i>
+              <i class="fas fa-star filled"></i>
+              <i class="fas fa-star-half-alt unfilled"></i>
+              <span>4.99</span>
+            </div>
             <p>Worldwide shipping available</p>
             <p>Buyer protection available</p>
           </div>
@@ -100,18 +168,48 @@
               alt="Image of Vlogging Camera"
             />
             <h3>Vlogging Camera</h3>
+            <h4>$1800.80</h4>
+            <div class="rating-section">
+              <i class="fas fa-star filled"></i>
+              <i class="fas fa-star filled"></i>
+              <i class="fas fa-star filled"></i>
+              <i class="fas fa-star filled"></i>
+              <i class="fas fa-star filled"></i>
+              <i class="fas fa-star-half-alt unfilled"></i>
+              <span>4.99</span>
+            </div>
             <p>Worldwide shipping available</p>
             <p>Buyer protection available</p>
           </div>
           <div class="card">
             <img src="images/green-screen.png" alt="Image of Green Screen" />
             <h3>Green Screen</h3>
+            <h4>$2548</h4>
+            <div class="rating-section">
+              <i class="fas fa-star filled"></i>
+              <i class="fas fa-star filled"></i>
+              <i class="fas fa-star filled"></i>
+              <i class="fas fa-star filled"></i>
+              <i class="fas fa-star filled"></i>
+              <i class="fas fa-star-half-alt unfilled"></i>
+              <span>4.99</span>
+            </div>
             <p>Worldwide shipping available</p>
             <p>Buyer protection available</p>
           </div>
           <div class="card">
             <img src="images/action-camera.png" alt="Image of Action Camera" />
             <h3>Action Camera</h3>
+            <h4>$380.00</h4>
+            <div class="rating-section">
+              <i class="fas fa-star filled"></i>
+              <i class="fas fa-star filled"></i>
+              <i class="fas fa-star filled"></i>
+              <i class="fas fa-star filled"></i>
+              <i class="fas fa-star filled"></i>
+              <i class="fas fa-star-half-alt unfilled"></i>
+              <span>4.99</span>
+            </div>
             <p>Worldwide shipping available</p>
             <p>Buyer protection available</p>
           </div>
@@ -122,6 +220,8 @@
           </div>
         </div>
       </section>
+      <!-- Popular Collection section end here -->
+      <!-- Featured Product section start from hre -->
       <section class="container">
         <div class="banner">
           <div class="banner-left">
@@ -138,10 +238,8 @@
         </div>
       </section>
     </main>
-    <script
-      src="https://kit.fontawesome.com/6d1358c58e.js"
-      crossorigin="anonymous"
-    ></script>
+    <!-- Featured Product section end hre -->
+    <!-- Footer section start from here -->
     <footer>
       <div class="text-section">
         <h3>Influencer Products</h3>
@@ -161,5 +259,12 @@
         ></a>
       </div>
     </footer>
+    <!-- Footer section end here -->
+    <!-- Font Awesome Script start from here -->
+    <script
+      src="https://kit.fontawesome.com/6d1358c58e.js"
+      crossorigin="anonymous"
+    ></script>
+    <!-- Font Awesome Script end here -->
   </body>
 </html>
