--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
       <!-- Navigation Bar end here -->
       <!-- Navigation Cover start from here -->
       <section class="container">
-        <div class="banner">
+        <div class="banner-top">
           <div class="banner-left">
             <h1>Start your Journey as Influencer</h1>
             <p>This is fabulous journey for you, as a Influencer</p>
             <button class="primary-button">
-              Prebook now <span><i class="fas fa-arrow-right"></i></span>
+              Preebook Now <span><i class="fas fa-arrow-right"></i></span>
             </button>
           </div>
           <div class="banner-right">
@@ -213,22 +213,17 @@
             <p>Worldwide shipping available</p>
             <p>Buyer protection available</p>
           </div>
-          <div class="see-more">
-            <a href="#see-more"
-              >See More <span><i class="fas fa-arrow-right"></i></span
-            ></a>
-          </div>
         </div>
       </section>
       <!-- Popular Collection section end here -->
       <!-- Featured Product section start from hre -->
       <section class="container">
-        <div class="banner">
-          <div class="banner-left">
+        <div class="banner-bottom">
+          <div class="banner-bottom-left">
             <img src="images/main-camera.png" alt="Main Camera" />
           </div>
 
-          <div class="banner-right">
+          <div class="banner-bottom-right">
             <h1>Start your Journey as Influencer</h1>
             <p>This is fabulous journey for you, as a Influencer</p>
             <button class="primary-button">
