--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
         <div class="collection">
           <div class="card">
             <img src="images/tripod.png" alt="Image of Tripod" />
-            <h3>Flex Tripod</h3>
-            <h4>$50.48</h4>
+            <h2 class="card-content spacing">Flex Tripod</h2>
+            <h3 class="card-content spacing">$50.48</h3>
             <div class="rating-section">
               <i class="fas fa-star filled"></i>
               <i class="fas fa-star filled"></i>
@@ -79,13 +79,14 @@
               <i class="fas fa-star-half-alt unfilled"></i>
               <span>4.99</span>
             </div>
-            <p>Worldwide shipping available</p>
-            <p>Buyer protection available</p>
+            <p class="card-content">Worldwide shipping available</p>
+            <p class="card-content">Buyer protection available</p>
+            <p class="card-content">Email us for anything...</p>
           </div>
           <div class="card">
             <img src="images/mic.png" alt="Image of Microphone" />
-            <h3>Microphone</h3>
-            <h4>$12025</h4>
+            <h2 class="card-content spacing">Microphone</h2>
+            <h3 class="card-content spacing">$12025</h3>
             <div class="rating-section">
               <i class="fas fa-star filled"></i>
               <i class="fas fa-star filled"></i>
@@ -95,13 +96,14 @@
               <i class="fas fa-star-half-alt unfilled"></i>
               <span>4.99</span>
             </div>
-            <p>Worldwide shipping available</p>
-            <p>Buyer protection available</p>
+            <p class="card-content">Worldwide shipping available</p>
+            <p class="card-content">Buyer protection available</p>
+            <p class="card-content">Email us for anything...</p>
           </div>
           <div class="card">
             <img src="images/airpod.png" alt="Image of Airbuds" />
-            <h3>Airbuds</h3>
-            <h4>$100.00</h4>
+            <h2 class="card-content spacing">Airbuds</h2>
+            <h3 class="card-content spacing">$100.00</h3>
             <div class="rating-section">
               <i class="fas fa-star filled"></i>
               <i class="fas fa-star filled"></i>
@@ -111,13 +113,14 @@
               <i class="fas fa-star-half-alt unfilled"></i>
               <span>4.99</span>
             </div>
-            <p>Worldwide shipping available</p>
-            <p>Buyer protection available</p>
+            <p class="card-content">Worldwide shipping available</p>
+            <p class="card-content">Buyer protection available</p>
+            <p class="card-content">Email us for anything...</p>
           </div>
           <div class="card">
             <img src="images/drone.png" alt="Images of Drone" />
-            <h3>Drone</h3>
-            <h4>$980.25</h4>
+            <h2 class="card-content spacing">Drone</h2>
+            <h3 class="card-content spacing">$980.25</h3>
             <div class="rating-section">
               <i class="fas fa-star filled"></i>
               <i class="fas fa-star filled"></i>
@@ -127,13 +130,14 @@
               <i class="fas fa-star-half-alt unfilled"></i>
               <span>4.99</span>
             </div>
-            <p>Worldwide shipping available</p>
-            <p>Buyer protection available</p>
+            <p class="card-content">Worldwide shipping available</p>
+            <p class="card-content">Buyer protection available</p>
+            <p class="card-content">Email us for anything...</p>
           </div>
           <div class="card">
             <img src="images/lights.png" alt="Image of Light Setup" />
-            <h3>Light Setup</h3>
-            <h4>$1200.00</h4>
+            <h2 class="card-content spacing">Light Setup</h2>
+            <h3 class="card-content spacing">$1200.00</h3>
             <div class="rating-section">
               <i class="fas fa-star filled"></i>
               <i class="fas fa-star filled"></i>
@@ -143,13 +147,14 @@
               <i class="fas fa-star-half-alt unfilled"></i>
               <span>4.99</span>
             </div>
-            <p>Worldwide shipping available</p>
-            <p>Buyer protection available</p>
+            <p class="card-content">Worldwide shipping available</p>
+            <p class="card-content">Buyer protection available</p>
+            <p class="card-content">Email us for anything...</p>
           </div>
           <div class="card">
             <img src="images/photoshoot.png" alt="" />
-            <h3>Photo-shoot Sets</h3>
-            <h4>$820.40</h4>
+            <h2 class="card-content spacing">Photo-shoot Sets</h2>
+            <h3 class="card-content spacing">$820.40</h3>
             <div class="rating-section">
               <i class="fas fa-star filled"></i>
               <i class="fas fa-star filled"></i>
@@ -159,16 +164,17 @@
               <i class="fas fa-star-half-alt unfilled"></i>
               <span>4.99</span>
             </div>
-            <p>Worldwide shipping available</p>
-            <p>Buyer protection available</p>
+            <p class="card-content">Worldwide shipping available</p>
+            <p class="card-content">Buyer protection available</p>
+            <p class="card-content">Email us for anything...</p>
           </div>
           <div class="card">
             <img
               src="images/Vlogging-camera.png"
               alt="Image of Vlogging Camera"
             />
-            <h3>Vlogging Camera</h3>
-            <h4>$1800.80</h4>
+            <h2 class="card-content spacing">Vlogging Camera</h2>
+            <h3 class="card-content spacing">$1800.80</h3>
             <div class="rating-section">
               <i class="fas fa-star filled"></i>
               <i class="fas fa-star filled"></i>
@@ -178,13 +184,14 @@
               <i class="fas fa-star-half-alt unfilled"></i>
               <span>4.99</span>
             </div>
-            <p>Worldwide shipping available</p>
-            <p>Buyer protection available</p>
+            <p class="card-content">Worldwide shipping available</p>
+            <p class="card-content">Buyer protection available</p>
+            <p class="card-content">Email us for anything...</p>
           </div>
           <div class="card">
             <img src="images/green-screen.png" alt="Image of Green Screen" />
-            <h3>Green Screen</h3>
-            <h4>$2548</h4>
+            <h2 class="card-content spacing">Green Screen</h2>
+            <h3 class="card-content spacing">$2548</h3>
             <div class="rating-section">
               <i class="fas fa-star filled"></i>
               <i class="fas fa-star filled"></i>
@@ -194,13 +201,14 @@
               <i class="fas fa-star-half-alt unfilled"></i>
               <span>4.99</span>
             </div>
-            <p>Worldwide shipping available</p>
-            <p>Buyer protection available</p>
+            <p class="card-content">Worldwide shipping available</p>
+            <p class="card-content">Buyer protection available</p>
+            <p class="card-content">Email us for anything...</p>
           </div>
           <div class="card">
             <img src="images/action-camera.png" alt="Image of Action Camera" />
-            <h3>Action Camera</h3>
-            <h4>$380.00</h4>
+            <h2 class="card-content spacing">Action Camera</h2>
+            <h3 class="card-content spacing">$380.00</h3>
             <div class="rating-section">
               <i class="fas fa-star filled"></i>
               <i class="fas fa-star filled"></i>
@@ -210,8 +218,9 @@
               <i class="fas fa-star-half-alt unfilled"></i>
               <span>4.99</span>
             </div>
-            <p>Worldwide shipping available</p>
-            <p>Buyer protection available</p>
+            <p class="card-content">Worldwide shipping available</p>
+            <p class="card-content">Buyer protection available</p>
+            <p class="card-content">Email us for anything...</p>
           </div>
         </div>
       </section>
@@ -224,8 +233,12 @@
           </div>
 
           <div class="banner-bottom-right">
-            <h1>Start your Journey as Influencer</h1>
-            <p>This is fabulous journey for you, as a Influencer</p>
+            <h1>Featured products at one place</h1>
+            <p>
+              For your journey, we are alway with you to share our knowledge &
+              support. So, don't worry, go ahead for your bright future. Wish
+              all the best!
+            </p>
             <button class="primary-button">
               Join Now <span><i class="fas fa-arrow-right"></i></span>
             </button>
@@ -237,9 +250,9 @@
     <!-- Footer section start from here -->
     <footer>
       <div class="text-section">
-        <h3>Influencer Products</h3>
-        <small>Copyright &copy; 2020 Influencer products</small><br />
-        <small>All right reserved</small>
+        <h2>Influencer Products</h2>
+        <h4>Copyright &copy; 2020 Influencer products</h4>
+        <h5>All right reserved</h5>
       </div>
       <div class="social-media">
         <a href="https://www.instagram.com/"
