--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
       <section class="container">
         <div class="banner-bottom">
           <div class="banner-bottom-left">
-            <img src="images/main-camera.png" alt="Main Camera" />
+            <img src="images/featured-image.jpg" alt="Main Camera" />
           </div>
 
           <div class="banner-bottom-right">
