--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
       <section class="container">
         <div class="banner-top">
           <div class="banner-left">
-            <h1>Start your Journey as Influencer</h1>
+            <h1>Start your Journey as a Influencer</h1>
             <p>This is fabulous journey for you, as a Influencer</p>
-            <button class="primary-button">
-              Preebook Now <span><i class="fas fa-arrow-right"></i></span>
-            </button>
+            <a class="primary-button" href="#"
+              >Prebook Now <span><i class="fas fa-arrow-right"></i></span
+            ></a>
           </div>
           <div class="banner-right">
             <img src="images/main-camera.png" alt="Main Camera" />
@@ -52,9 +52,9 @@
         <div class="logo">
           <img src="logos/Alibaba.svg" alt="Logo of Alibaba" />
           <img src="logos/Amazon.svg" alt="Logo of Amazon.com" />
-          <img src="logos/Daraz.pk Logo.svg" alt="Logo of daraz" />
+          <img src="logos/Daraz.pk Logo.svg" alt="" />
           <img src="logos/Ebay.svg" alt="Logo of Ebay" />
-          <img src="logos/Rakuten.svg" alt="Logo of Rakuten" />
+          <img src="logos/Rakuten.svg" alt="Logo" />
           <img src="logos/Walmart.svg" alt="Logo of Walmart" />
           <img src="logos/Target.svg" alt="Logo of Target" />
         </div>
@@ -101,8 +101,8 @@
             <p class="card-content">Email us for anything...</p>
           </div>
           <div class="card">
-            <img src="images/airpod.png" alt="Image of Airbuds" />
-            <h2 class="card-content spacing">Airbuds</h2>
+            <img src="images/airpod.png" alt="" />
+            <h2 class="card-content spacing">Air buds</h2>
             <h3 class="card-content spacing">$100.00</h3>
             <div class="rating-section">
               <i class="fas fa-star filled"></i>
@@ -169,11 +169,8 @@
             <p class="card-content">Email us for anything...</p>
           </div>
           <div class="card">
-            <img
-              src="images/Vlogging-camera.png"
-              alt="Image of Vlogging Camera"
-            />
-            <h2 class="card-content spacing">Vlogging Camera</h2>
+            <img src="images/Vlogging-camera.png" alt="" />
+            <h2 class="card-content spacing">Camera</h2>
             <h3 class="card-content spacing">$1800.80</h3>
             <div class="rating-section">
               <i class="fas fa-star filled"></i>
@@ -222,8 +219,14 @@
             <p class="card-content">Buyer protection available</p>
             <p class="card-content">Email us for anything...</p>
           </div>
+          <div>
+            <a class="see-more" href="#"
+              >See More <i class="fas fa-arrow-right"></i
+            ></a>
+          </div>
         </div>
       </section>
+
       <!-- Popular Collection section end here -->
       <!-- Featured Product section start from hre -->
       <section class="container">
@@ -235,9 +238,9 @@
           <div class="banner-bottom-right">
             <h1>Featured products at one place</h1>
             <p>
-              For your journey, we are alway with you to share our knowledge &
+              For your journey, we are always with you to share our knowledge &
               support. So, don't worry, go ahead for your bright future. Wish
-              all the best!
+              you all the best!
             </p>
             <button class="primary-button">
               Join Now <span><i class="fas fa-arrow-right"></i></span>
