hover effect added

--- a/index.html
+++ b/index.html
@@ -14,16 +14,23 @@
         <div class="menu-title">
           <h1>Influencer Products</h1>
         </div>
+        <level class="nav-toggler-icon" for="nav-toggler">
+          <i class="card-icon fas fa-bars"></i>
+        </level>
         <ul class="navigation">
-          <li><a href="#home">Home</a></li>
-          <li><a href="#products">Products</a></li>
-          <li><a href="#sign-up">Sign Up</a></li>
-          <li><a href="#log-in">Log In</a></li>
+          <li><a class="hover-items" href="#home">Home</a></li>
+          <li><a class="hover-items" href="#home">Products</a></li>
+          <li><a class="hover-items" href="#home">Sign Up</a></li>
+          <li><a class="hover-items" href="#home">Log In</a></li>
           <li>
-            <a href=""><i class="fas fa-search"></i></a>
+            <a class="hover-items" href="#home"
+              ><i class="fas fa-search"></i
+            ></a>
           </li>
           <li>
-            <a href=""><i class="fas fa-cart-plus"></i></a>
+            <a class="hover-items cart-items" href="#home"
+              ><i class="fas fa-cart-plus"></i
+            ></a>
           </li>
         </ul>
       </nav>
@@ -50,13 +57,13 @@
       <!-- Company Logo section start from here -->
       <section id="company-logo">
         <div class="logo">
-          <img src="logos/Alibaba.svg" alt="Logo of Alibaba" />
-          <img src="logos/Amazon.svg" alt="Logo of Amazon.com" />
-          <img src="logos/Daraz.pk Logo.svg" alt="" />
-          <img src="logos/Ebay.svg" alt="Logo of Ebay" />
-          <img src="logos/Rakuten.svg" alt="Logo" />
-          <img src="logos/Walmart.svg" alt="Logo of Walmart" />
-          <img src="logos/Target.svg" alt="Logo of Target" />
+          <img class="logos" src="logos/Alibaba.svg" alt="Logo of Alibaba" />
+          <img class="logos" src="logos/Amazon.svg" alt="Logo of Amazon.com" />
+          <img class="logos" src="logos/Daraz.pk Logo.svg" alt="" />
+          <img class="logos" src="logos/Ebay.svg" alt="Logo of Ebay" />
+          <img class="logos" src="logos/Rakuten.svg" alt="Logo" />
+          <img class="logos" src="logos/Walmart.svg" alt="Logo of Walmart" />
+          <img class="logos" src="logos/Target.svg" alt="Logo of Target" />
         </div>
       </section>
       <!-- Company Logo section end here -->
@@ -242,9 +249,9 @@
               support. So, don't worry, go ahead for your bright future. Wish
               you all the best!
             </p>
-            <button class="primary-button">
-              Join Now <span><i class="fas fa-arrow-right"></i></span>
-            </button>
+            <a class="primary-button" href="#home"
+              >Join Now <span><i class="fas fa-arrow-right"></i></span
+            ></a>
           </div>
         </div>
       </section>
@@ -253,7 +260,9 @@
     <!-- Footer section start from here -->
     <footer>
       <div class="text-section">
-        <h2>Influencer Products</h2>
+        <h2 title="Start your Journey as a Influencer...">
+          Influencer Products
+        </h2>
         <h4>Copyright &copy; 2020 Influencer products</h4>
         <h5>All right reserved</h5>
       </div>
