--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
       <section class="container">
         <div class="banner-top">
           <div class="banner-left">
-            <h1>Start your Journey as a Influencer</h1>
+            <h1>
+              Start your Journey as a <span class="menu-title">Influencer</span>
+            </h1>
             <p>This is fabulous journey for you, as a Influencer</p>
             <a class="primary-button" href="#"
               >Prebook Now <span><i class="fas fa-arrow-right"></i></span
